hack to fix previews inside a dialog that get clipped only on Safari

--- a/src/features/spacepreview/spacepreview.css
+++ b/src/features/spacepreview/spacepreview.css
@@ -30,6 +30,10 @@ body > .x-page-preview {
   max-width: 75vw;
   max-height: min(50vh, 450px);
 }
+dialog:has(> .x-page-preview.on-safari) {
+  /* fixes a Safari bug where the content gets clipped */
+  overflow: visible;
+}
 
 .x-page-preview,
 #pagePreviewInner > div:last-child {
